@@ -3,6 +3,7 @@ HLStats ChangeLog
 
 1.63 ()
 *) New: skype field in player table. hls_set skype from ingame #16
+*) New: steam achievements are show at the games which have steam stats
 *) Closed: #14
 *) Closed: #15
 
